Page MenuHome GnuPG

FASTWIPE_T undefined
Closed, ResolvedPublic

Description

OS: Solaris 10 (sparc)
CC: gcc-4.7.2

In compilation ntbtls-0.1.1, the following errors appears:

protocol.c:241:3: error: 'FASTWIPE_T' undeclared (first use in this function)

FASTWIPE_T is used in src/wipemem.h but is not defined anywhere.
The macro using FASTWIPE_T seems to be the same in g10lib.h of libgcrypt-1.7.7.
So, I put the definition FASTWIPE_T in src/wipemem.h according to g10lib.h:

 typedef unsigned long long u64;
# define FASTWIPE_T u64

This works fine on my machine.

Event Timeline

justus triaged this task as Normal priority.Jun 14 2017, 2:41 PM
justus added a project: ntbtls.
gniibe changed the task status from Open to Testing.Jan 29 2018, 11:15 AM
gniibe claimed this task.
gniibe added a subscriber: gniibe.

Thanks for the report.
Fixed in master.