Fix wipemem.h for other architectures.

* src/wipemem.h (FASTWIPE_T): Defined.

--

GnuPG-bug-id: 3207
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>